unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/pse__Revenue_Forecast_Version_Adjustment__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RevenueForecastVersionAdjustmentHelp</customHelpPage>
    <description>Stores adjustments to values on revenue forecast version detail records.</description>
    <label>Revenue Forecast Version Adjustment</label>
    <nameField>
        <displayFormat>RFVA-{00000000}</displayFormat>
        <label>Revenue Forecast Version Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Version Adjustments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>