unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, the change in value represented by this adjustment is applied to the values displayed on the Review Forecast Version page.</description>
    <inlineHelpText>If selected, the change in value represented by this adjustment is applied to the values displayed on the Review Forecast Version page.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>