unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Corp_Adjustment_Value__c.field-meta.xml
<CustomField>
    <fullName>pse__Corp_Adjustment_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The change in value represented by the adjustment.</description>
    <inlineHelpText>The change in value represented by the adjustment.</inlineHelpText>
    <label>Corp: Adjustment Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>