unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>pse__Exchange_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The exchange rate from the corporate currency to the local currency.</description>
    <inlineHelpText>The exchange rate from the corporate currency to the local currency.</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>