unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Notes__c.field-meta.xml
<CustomField>
    <fullName>pse__Notes__c</fullName>
    <description>Information to explain why the adjustment was made.</description>
    <inlineHelpText>Information to explain why the adjustment was made.</inlineHelpText>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>