unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the region this adjustment relates to.</description>
    <inlineHelpText>Lookup to the region this adjustment relates to.</inlineHelpText>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Revenue Forecast Adjustments</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>