unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Revenue_Forecast_Version__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the revenue forecast version this adjustment relates to.</description>
    <inlineHelpText>Lookup to the revenue forecast version this adjustment relates to.</inlineHelpText>
    <label>Revenue Forecast Version</label>
    <referenceTo>pse__Revenue_Forecast_Version__c</referenceTo>
    <relationshipLabel>Revenue Forecast Adjustments</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>