unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Scenario__c.field-meta.xml
<CustomField>
    <fullName>pse__Scenario__c</fullName>
    <description>The scenario that this revenue forecast version adjustment relates to.</description>
    <inlineHelpText>The scenario that this revenue forecast version adjustment relates to.</inlineHelpText>
    <label>Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>expected</fullName>
                <default>true</default>
                <label>Expected</label>
            </value>
            <value>
                <fullName>best</fullName>
                <label>Best Case</label>
            </value>
            <value>
                <fullName>worst</fullName>
                <label>Worst Case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>