unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Adjustment__c/fields/pse__Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>pse__Unique_Identifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The unique identifier for active revenue forecast version adjustment records. This is a system controlled field.</description>
    <inlineHelpText>The unique identifier for active revenue forecast version adjustment records. This is a system controlled field.</inlineHelpText>
    <label>Unique identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>